added content/info to pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,14 +3,14 @@
 
 <head>
     {% if title %}
-    <title>{{ title }} - Local Music</title>
+    <title>{{ title }} - LGBT+Music</title>
     {% else %}
-    <title>Local Music</title>
+    <title>LGBT+Music</title>
     {% endif %}
 </head>
 
 <body>
-    <h1>Ithaca Music</h1>
+    <h1>LGBT+Music</h1>
     <hr/>
     <div>
         <a href="/index">Home Page</a>
