--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h2>Welcome to Ithaca Music!</h2>
-    <p>Use this site to get information about local artists in Ithaca!</p>
+    <h2>Welcome to LGBT+Music!</h2>
+    <p>Check out this site to learn more about LGBT+ musical artists!</p>
 
 {% endblock %}
