--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
         {% else %}
             <a href="{{ url_for("new_artist") }}">Create New Artist</a>
             <a href="{{ url_for("new_venue") }}">Create New Venue</a>
+            <a href="{{ url_for("new_event") }}">Create New Event</a>
             <a href="{{ url_for('logout') }}">Logout</a>
         {% endif %}
     </div>
