--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
 
-    <h2>Welcome to LGBT+Music!</h2>
-    <p>Check out this site to learn more about LGBT+ musical artists!</p>
+    <div class="jumbotron">
+        <h2 class="display-4">Welcome to LGBT+Music!</h2>
+        <p class="lead">Check out this site to learn more about LGBT+ musical artists!</p>
+    </div>
 
 {% endblock %}
