--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h2>{{ artist.name }}</h2>
     <p>Hometown: {{ artist.hometown }}</p>
     <p>Bio: {{ artist.bio }}</p>
