--- a/app/templates/new_artist.html
+++ b/app/templates/new_artist.html
@@ -1,38 +1,15 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
 
     <h2>Create New Artist</h2>
 
-     <form action="" method="post" novalidate>
-
-        {{ form.hidden_tag() }} <!-- protects form against attack -->
-
-        <p>
-            {{ form.name.label }}<br/>
-            {{ form.name(size='30') }}<br/>
-            {% for error in form.name.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{ form.hometown.label }}<br/>
-            {{ form.hometown(size='30') }}<br/>
-            {% for error in form.hometown.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{ form.bio.label }}<br/>
-            {{ form.bio(rows='10', cols='30') }}<br/>
-            {% for error in form.bio.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>{{ form.submit() }}</p>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 
 
     </form>
