--- a/app/templates/new_event.html
+++ b/app/templates/new_event.html
@@ -1,48 +1,14 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
 
     <h2>Create New Event</h2>
 
-     <form action="" method="post" novalidate>
-
-        {{ form.hidden_tag() }} <!-- protects form against attack -->
-
-        <p>
-            {{ form.name.label }}<br/>
-            {{ form.name(size='30') }}<br/>
-            {% for error in form.name.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-         <p>
-            {{ form.date.label }} (MM-DD-YYYY)<br/>
-            {{ form.date(class='datepicker') }}<br/>
-            {% for error in form.date.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{ form.venue.label }}<br/>
-            {{ form.venue() }}<br/>
-            {% for error in form.venue.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{ form.artists.label }}<br/>
-            {{ form.artists() }}<br/>
-            {% for error in form.artists.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>{{ form.submit() }}</p>
-
-
-    </form>
+     <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+     </div>
 
 {% endblock %}
