--- a/app/templates/new_venue.html
+++ b/app/templates/new_venue.html
@@ -1,40 +1,14 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
 
     <h2>Create New Venue</h2>
 
-     <form action="" method="post" novalidate>
-
-        {{ form.hidden_tag() }} <!-- protects form against attack -->
-
-        <p>
-            {{ form.name.label }}<br/>
-            {{ form.name(size='30') }}<br/>
-            {% for error in form.name.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-         <p>
-            {{ form.city.label }}<br/>
-            {{ form.city(size='30') }}<br/>
-            {% for error in form.city.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{ form.country.label }}<br/>
-            {{ form.country(rows='10', cols='30') }}<br/>
-            {% for error in form.country.errors %}
-                <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-
-        <p>{{ form.submit() }}</p>
-
-
-    </form>
+     <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+     </div>
 
 {% endblock %}
