--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h1>An Unexpected Error Has Occurred</h1>
+    <p>The administrator has been notified. Sorry for the inconvenience!</p>
     <p><a href="{{ url_for('index') }}">Home</a></p>
 
 {% endblock %}
